# nomeolvides

./: Makefile.am  configure.ac
data/: Makefile.am  nomeolvides-git.appdata.xml.in  nomeolvides-git.desktop.in.in
po/: POTFILES.in  POTFILES.skip  es.po
src/: Makefile.am  nomeolvides-app.vala  nomeolvides-configuracion.vala  nomeolvides.gresource.xml
